--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "@types/js-cookie": "^3.0.3",
     "axios": "^1.4.0",
     "js-cookie": "^3.0.5",
